# FPL-7

./: README.md  manage.py  pyproject.toml
api/: serializers.py  services.py  views.py
api/tests/: test_views.py
the-magnificent-7/: asgi.py  settings.py  urls.py  wsgi.py
